--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
                 </ul>
             </nav>
             <ul class="header-contact__list list">
-                <li class="header-contact__item"><a class="header-contact__link link contact__link-top" href="mailto:info@devstudio.com">
+                <li class="header-contact__item"><a class="header-contact__link link contact__link-top"
+                        href="mailto:info@devstudio.com">
                         <svg class="header-contact__icon" width="16" height="12">
                             <use href="./images/symbol-defs.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a></li>
-                <li class="header-contact__item"><a class="header-contact__link link contact__link-bottom" href="tel:+380961111111">
+                <li class="header-contact__item"><a class="header-contact__link link contact__link-bottom"
+                        href="tel:+380961111111">
                         <svg class="header-contact__icon" width="10" height="16">
                             <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                         </svg>+38 096
@@ -206,15 +208,18 @@
                 <h2 class="team-section__title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-list__item">
-                                    <picture>
-                                        <source srcset="./images/team/igor_desktop_270@1x.jpg 1x, ./images/team/igor_desktop_270@2x.jpg 2x"
-                                            media="(min-width: 1200px)">
-                                        <source srcset="./images/team/igor_tablet_354@1x.jpg 1x, ./images/team/igor_tablet_354@2x.jpg 2x"
-                                            media="(min-width: 768px)">
-                                        <source srcset="./images/team/igor_mobile_450@1x.jpg 1x, ./images/team/igor_mobile_450@2x.jpg 2x"
-                                            media="(min-width: 480px)">
-                                        <img src="./images/team/ihor.jpg" alt="Игорь Демьяненко">
-                                    </picture>
+                        <picture>
+                            <source
+                                srcset="./images/team/igor_desktop_270@1x.jpg 1x, ./images/team/igor_desktop_270@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/igor_tablet_354@1x.jpg 1x, ./images/team/igor_tablet_354@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/igor_mobile_450@1x.jpg 1x, ./images/team/igor_mobile_450@2x.jpg 2x"
+                                media="(min-width: 480px)">
+                            <img src="./images/team/ihor.jpg" alt="Игорь Демьяненко">
+                        </picture>
                         <!-- <img src="./images/img4.jpg" alt="Мужчина в очкаъ и с бородой" width="270"> -->
                         <div class="team-block">
                             <h3 class="team-block__name">Игорь Демьяненко</h3>
@@ -253,15 +258,18 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                                    <picture>
-                                        <source srcset="./images/team/olha_desktop_270@1x.jpg 1x, ./images/team/olha_desktop_270@2x.jpg 2x"
-                                            media="(min-width: 1200px)">
-                                        <source srcset="./images/team/olha_tablet_354@1x.jpg 1x, ./images/team/olha_tablet_354@2x.jpg 2x"
-                                            media="(min-width: 768px)">
-                                        <source srcset="./images/team/olha_mobile_450@1x.jpg 1x, ./images/team/olha_mobile_450@2x.jpg 2x"
-                                            media="(min-width: 480px)">
-                                        <img src="./images/team/olha.jpg" alt="Ольга Репина">
-                                    </picture>
+                        <picture>
+                            <source
+                                srcset="./images/team/olha_desktop_270@1x.jpg 1x, ./images/team/olha_desktop_270@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/olha_tablet_354@1x.jpg 1x, ./images/team/olha_tablet_354@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/olha_mobile_450@1x.jpg 1x, ./images/team/olha_mobile_450@2x.jpg 2x"
+                                media="(min-width: 480px)">
+                            <img src="./images/team/olha.jpg" alt="Ольга Репина">
+                        </picture>
                         <!-- <img src="./images/img5.jpg" alt="Девушка, блондинка в очках" width="270"> -->
                         <div class="team-block">
                             <h3 class="team-block__name">Ольга Репина</h3>
@@ -299,15 +307,18 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                                    <picture>
-                                        <source srcset="./images/team/nikolay_desktop_270@1x.jpg 1x, ./images/team/nikolay_desktop_270@2x.jpg 2x"
-                                            media="(min-width: 1200px)">
-                                        <source srcset="./images/team/nikolay_tablet_354@1x.jpg 1x, ./images/team/nikolay_tablet_354@2x.jpg 2x"
-                                            media="(min-width: 768px)">
-                                        <source srcset="./images/team/nikolay_mobile_450@1x.jpg 1x, ./images/team/nikolay_mobile_450@2x.jpg 2x"
-                                            media="(min-width: 480px)">
-                                        <img src="./images/team/nikolay.jpg" alt="Николай Тарасов">
-                                    </picture>
+                        <picture>
+                            <source
+                                srcset="./images/team/nikolay_desktop_270@1x.jpg 1x, ./images/team/nikolay_desktop_270@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/nikolay_tablet_354@1x.jpg 1x, ./images/team/nikolay_tablet_354@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/nikolay_mobile_450@1x.jpg 1x, ./images/team/nikolay_mobile_450@2x.jpg 2x"
+                                media="(min-width: 480px)">
+                            <img src="./images/team/nikolay.jpg" alt="Николай Тарасов">
+                        </picture>
                         <!-- <img src="./images/img6.jpg" alt="Мужчина с рыжей бородой" width="270"> -->
                         <div class="team-block">
                             <h3 class="team-block__name">Николай Тарасов</h3>
@@ -345,15 +356,18 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                                    <picture>
-                                        <source srcset="./images/team/michael_desktop_270@1x.jpg 1x, ./images/team/michael_desktop_270@2x.jpg 2x"
-                                            media="(min-width: 1200px)">
-                                        <source srcset="./images/team/michael_tablet_354@1x.jpg 1x, ./images/team/michael_tablet_354@2x.jpg 2x"
-                                            media="(min-width: 768px)">
-                                        <source srcset="./images/team/michael_mobile_450@1x.jpg 1x, ./images/team/michael_mobile_450@2x.jpg 2x"
-                                            media="(min-width: 480px)">
-                                        <img src="./images/team/michael.jpg" alt="Михаил Ермаков">
-                                    </picture>
+                        <picture>
+                            <source
+                                srcset="./images/team/michael_desktop_270@1x.jpg 1x, ./images/team/michael_desktop_270@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/michael_tablet_354@1x.jpg 1x, ./images/team/michael_tablet_354@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/michael_mobile_450@1x.jpg 1x, ./images/team/michael_mobile_450@2x.jpg 2x"
+                                media="(min-width: 480px)">
+                            <img src="./images/team/michael.jpg" alt="Михаил Ермаков">
+                        </picture>
                         <!-- <img src="./images/img7.jpg" alt="Мужчина, брюнет в очках" width="270"> -->
                         <div class="team-block">
                             <h3 class="team-block__name">Михаил Ермаков</h3>
