--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     <li class="header-navigation__item"><a class="header-navigation__link link"
                             href="./portfolio.html">Портфолио</a></li>
                     <li class="header-navigation__item"><a class="header-navigation__link link"
-                            href="Контакты">Контакты</a></li>
+                            href="Контакты">Контакты</a>
+                    </li>
                 </ul>
             </nav>
             <ul class="header-contact__list list">
