--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
             <a class="logo logo-link link" href="./index.html">Web<span class="logo-name">Studio</span></a>
             <nav class="header-navigation">
                 <ul class="header-navigation__list list">
-                    <li class="header-navigation__item"><a class="header-navigation__link link"
+                    <li class="header-navigation__item"><a class="header-navigation__link link current-link current"
                             href="./index.html">Студия</a></li>
-                    <li class="header-navigation__item"><a class="header-navigation__link link current-link"
+                    <li class="header-navigation__item"><a class="header-navigation__link link"
                             href="./portfolio.html">Портфолио</a></li>
                     <li class="header-navigation__item"><a class="header-navigation__link link"
                             href="Контакты">Контакты</a>
@@ -35,11 +35,13 @@
                 </ul>
             </nav>
             <ul class="header-contact__list list">
-                <li class="header-contact__item"><a class="header-contact__link link" href="mailto:info@devstudio.com">
+                <li class="header-contact__item"><a class="header-contact__link link contact__link-top"
+                        href="mailto:info@devstudio.com">
                         <svg class="header-contact__icon" width="16" height="12">
                             <use href="./images/symbol-defs.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a></li>
-                <li class="header-contact__item"><a class="header-contact__link link" href="tel:+380961111111">
+                <li class="header-contact__item"><a class="header-contact__link link contact__link-bottom"
+                        href="tel:+380961111111">
                         <svg class="header-contact__icon" width="10" height="16">
                             <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                         </svg>+38 096
@@ -48,14 +50,14 @@
                         11</a></li>
             </ul>
             <button type="button" class="menu-open">
-                <svg width="40" height="40">
+                <svg class="mob-menu__icon-open" width="40" height="40">
                     <use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>
             </button>
         </div>
 
         <!-- Мобильное меню -->
-        <div class="mobile-nav is-hidden">
+        <div class="mobile-nav is-hidden is-open">
             <div class="container">
                 <button type="button" class="menu-close">
                     <svg class="mob-menu__icon-close">
@@ -63,8 +65,7 @@
                     </svg></button>
                 <nav>
                     <ul class="mobile-menu list">
-                        <li class="mobile-menu__item"><a class="mobile-menu__link link"
-                                href="./index.html">Студия</a>
+                        <li class="mobile-menu__item"><a class="mobile-menu__link link" href="./index.html">Студия</a>
                         </li>
                         <li class="mobile-menu__item"><a class="mobile-menu__link link mobile-menu__current-link"
                                 href="./portfolio.html">Портфолио</a></li>
@@ -273,7 +274,8 @@
                                     <source
                                         srcset="./images/portfolio/portfolio6_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio6_mobile_450@2x.jpg 2x"
                                         media="(min-width: 480px)">
-                                    <img src="./images/portfolio/portfolio6.jpg" alt="mac computer on the table" width="100%">
+                                    <img src="./images/portfolio/portfolio6.jpg" alt="mac computer on the table"
+                                        width="100%">
                                 </picture>
                                 <!-- <img src="./images/portfolio/portfolio6.jpg" alt="макет сайта" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
@@ -327,7 +329,8 @@
                                     <source
                                         srcset="./images/portfolio/portfolio8_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio8_mobile_450@2x.jpg 2x"
                                         media="(min-width: 480px)">
-                                    <img src="./images/portfolio/portfolio8.jpg" alt="paper label with rope" width="100%">
+                                    <img src="./images/portfolio/portfolio8.jpg" alt="paper label with rope"
+                                        width="100%">
                                 </picture>
                                 <!-- <img src="./images/portfolio/portfolio8.jpg" alt="визитная карточка проекта"
                                     width="370"> -->
@@ -447,7 +450,7 @@
 
         </div>
     </footer>
-    <script src="./js/menu.js"></script>
+    <script defer src="js/menu.js"></script>
 </body>
 
 </html>
